# USAL-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  main.py  pyproject.toml
configs/: common.yaml  local.yaml
configs/tls/: edgedb.crt  edgedb.key
dbschema/: admin.gel  admin_permission.gel  article.gel  article_category.gel  author.gel  default.gel  default_sha.gel  degree.gel  major.gel  otp.gel  q_and_a.gel  resources.gel  state.gel  university.gel  user.gel
dbschema/migrations/: 00001-m1gnero.edgeql  00002-m17wta2.edgeql  00003-m15t7qy.edgeql  00004-m1bourg.edgeql  00005-m1ivlhb.edgeql  00006-m1nxk2b.edgeql  00007-m1sd6zj.edgeql  00008-m1wur5k.edgeql  00009-m1n75zb.edgeql  00010-m1fypbb.edgeql  00011-m1ul2yf.edgeql  00012-m1y24uo.edgeql  00013-m1uu4sh.edgeql  00014-m13ffnr.edgeql  00015-m1ezlht.edgeql
scripts/: constants.py  create_db.py
usal/api/v1/: __init__.py  admin_auth_router.py  admin_router.py  article_router.py  university_router.py  (+2 more)
usal/controllers/: admin_controller.py  article_controller.py  author_controller.py  qa_controller.py  resources_controller.py  university_controller.py  user_controller.py
usal/core/: __init__.py  api_response.py  config.py  container.py  database.py  db_repo.py  injector.py  permission_checker.py  schema.py  token_blacklist.py
usal/usecases/: admin_usecase.py  article_usecase.py  author_usecase.py  qa_usecase.py  resources_usecase.py  university_usecase.py  user_usecase.py
usal/util/: calculate_file_hash.py  config.py  excel_file.py  otp.py  password_crypt.py  perms.py  template.py
(+151 files in other folders)
